# sir

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  Makefile  README.md  TODO.md
sirc/: sir.l
src/instrument/: README.md
src/sem/: CMakeLists.txt  README.md  TODO.md  core_subset.md  sem.c  sir_jsonl.c  sir_jsonl.h
src/sem/tests/: test_caps_list.c  test_coverage_smoke.c  test_coverage_srcmap_smoke.c  test_exec_failure_diag_fields_json.c  test_run_cfg_if.c  test_run_cfg_join_phi.c  test_run_f64_cmp_olt_to_i32.c  test_run_float_load_canon.c  test_run_global_array_const.c  test_run_global_array_repeat.c  test_run_global_i32_ptrsym.c  test_run_global_struct_const_struct_zero.c  test_run_i16_store_load_zext.c  test_run_mem_copy_fill.c  test_run_mem_copy_overlap_trap.c  test_run_misaligned_load_traps.c  test_run_ptr_cmp.c  test_run_sem_bool_ops.c  test_run_sem_break_exits_loop.c  test_run_sem_i32_bitops.c  test_run_sem_i32_cmp_variants.c  test_run_sem_i32_div_s_trap_ok.c  test_run_sem_i32_div_s_trap_zero.c  test_run_sem_i32_shift_divrem_sat.c  test_run_sem_i32_trunc_i64.c  test_run_sem_mem_copy_i32.c  test_run_sem_mem_fill_i32.c  test_run_sem_ptr_alignof_array.c  test_run_sem_ptr_cast_roundtrip.c  test_run_sem_ptr_sizeof_array.c  test_run_sem_while_body_bad_code_traps.c  test_run_struct_layout.c  test_semrt_file_fs.c  test_semrt_write.c  test_trace_smoke.c
src/sem/tests/fixtures/: f64_cmp_olt_to_i32.sir.jsonl  global_struct_const_struct_zero.sir.jsonl  i16_store_load_zext.sir.jsonl  sem_while_body_bad_code_traps.sir.jsonl  sem_while_break_once.sir.jsonl
src/sirc/: CMakeLists.txt  README.md  TODO.md  sir.l  sir.y  sirc.c  sirc_emit.h  version.h
src/sirc/examples/: adt_make_get.sir  closure_make_call.sir  fun_sym_call.sir  sendloop_mono.sir  sendloop_uniform.sir
src/sirc/tests/: run_sirc_diag_expect.cmake  run_sirc_diag_json.cmake  run_sirc_golden.cmake  run_sirc_lint.cmake  run_sirc_then_compare_lower_vs_llvm.cmake  run_sirc_then_emit_zasm_and_run_zem.cmake  run_sirc_tool_multi.cmake
src/sirc/tests/fixtures/: bad_strict_call_indirect_arity.sir  bad_strict_call_indirect_extra_attr.sir  bad_strict_direct_call_arity.sir  bad_strict_i32_add_arity.sir  bad_strict_mem_copy_arity.sir  bad_strict_mnemonic_count_ignored.sir  bad_strict_mnemonic_sig_ignored.sir  bad_strict_mnemonic_ty_wrong_type.sir  bad_strict_ptr_sym_arity.sir  bad_syntax.sir  bad_type_unknown_ctor.sir  bad_type_unknown_name.sir
src/sirc/tests/golden/: alloca_array.sir.jsonl  call_indirect_ptrsym.sir.jsonl  cfg_join_phi.sir.jsonl  cfg_switch.sir.jsonl  load_store_no_align.sir.jsonl  mem_copy_fill.sir.jsonl  mem_stack.sir.jsonl  ptr_layout.sir.jsonl  sem_and_or_sc.sir.jsonl  sem_defer_void.sir.jsonl  sem_if_thunk_trap_not_taken.sir.jsonl  sem_if_val_val.sir.jsonl  sem_match_sum_payload_thunk.sir.jsonl  sem_scope_cfg.sir.jsonl  sem_switch_thunk.sir.jsonl  sem_while_break.sir.jsonl  trap.sir.jsonl
src/sircc/: CMakeLists.txt  README.md  TODO.md  check.c  check.h  compiler.c  compiler.h  compiler_diag.c  compiler_emit.c  compiler_ids.c  compiler_ids.h  compiler_internal.h  compiler_link.c  compiler_lower_cfg.c  compiler_lower_expr_a.c  compiler_lower_expr_b.c  compiler_lower_hl.c  compiler_lower_hl.h  compiler_lower_internal.h  compiler_lower_simd.c  compiler_lower_util.c  compiler_parse.c  compiler_tables.c  compiler_types.c  compiler_validate.c  compiler_zasm.c  compiler_zasm_addr.c  compiler_zasm_addr_emit.c  compiler_zasm_backend.c  compiler_zasm_backend_cfg.c  compiler_zasm_backend_helpers.h  compiler_zasm_backend_names.c  compiler_zasm_backend_ops.c  compiler_zasm_backend_stmt.c  compiler_zasm_backend_util.c  compiler_zasm_emit.c  compiler_zasm_internal.h  compiler_zasm_lower_stmt.c  compiler_zasm_lower_value.c  compiler_zasm_regcache.c  (+7 more)
src/sircc/docs/: ast_to_sir_cookbook.md  data_v1.md  hl_core_contract.md  interop_extern.md  mir_producer.md  src.md  target_layout_contract.md  test.md
src/sircc/examples/: add_mnemonic_tags.sir.jsonl  alloca_count_ref.sir.jsonl  alloca_op.sir.jsonl  bad_adt_missing_feature.sir.jsonl  bad_closure_make_code_sig_mismatch.sir.jsonl  bad_closure_missing_feature.sir.jsonl  bad_fn_linkage.sir.jsonl  bad_fun_missing_feature.sir.jsonl  bad_fun_sym_conflict_global.sir.jsonl  bad_fun_sym_sig_mismatch_vs_fn.sir.jsonl  bad_fun_sym_undefined.sir.jsonl  bad_instr_operand.sir.jsonl  bad_sem_if_branch_kind.sir.jsonl  bad_sem_match_sum_thunk_param_ty.sir.jsonl  bad_sem_missing_feature.sir.jsonl  bad_sem_switch_scrut_type.sir.jsonl  bad_sem_while_cond_not_thunk.sir.jsonl  bad_simd_splat_missing_type_ref.sir.jsonl  bad_simd_splat_wrong_type_ref.sir.jsonl  bad_src_ref.sir.jsonl  bad_unknown_field.sir.jsonl  cfg_join_phi.sir.jsonl  closure_make_call.sir.jsonl  cmp_mnemonic_tags.sir.jsonl  const7_string_ids.sir.jsonl  eff_fence.sir.jsonl  feature_gate_late_meta.sir.jsonl  float_mnemonic_tags.sir.jsonl  forward_refs.sir.jsonl  global_array_const.sir.jsonl  global_array_repeat.sir.jsonl  global_i32_ptrsym.sir.jsonl  interop_export_add2.sir.jsonl  mem_copy_fill_zir_main.sir.jsonl  sem_bool_ops.sir.jsonl  sem_defer_cfg_form_strips_sem.sir.jsonl  sem_defer_increments_global_before_ret.sir.jsonl  sem_i32_bitops.sir.jsonl  sem_i32_cmp_variants.sir.jsonl  sem_i32_div_s_trap_ok.sir.jsonl  (+28 more)
src/sircc/prelude/: data_v1.sir.jsonl  zabi25_min.sir.jsonl
src/sircc/tests/: compare_llvm_vs_lower.cmake  emit_zasm_and_expect_contains.cmake  emit_zasm_and_map.cmake  emit_zasm_and_run_zem_expect_exit.cmake  expect_output_file_not_contains.cmake  expect_stderr_contains.cmake  interop_export_add2_harness.c  link_obj_with_c_and_expect_exit.cmake
src/sircc/tools/: mnemonic_coverage.py
src/sircore/: CMakeLists.txt  README.md  api.md  guest_mem.c  guest_mem.h  handles.h  hosted_file_fs.c  hosted_file_fs.h  hosted_zabi.c  hosted_zabi.h  sem_host.c  sem_host.h  sir_module.c  sir_module.h  zcl1.c  zcl1.h  zi_ctl.md
src/sircore/tests/: test_module_hello.c  test_module_negative.c
src/svm/: README.md
